header overflow fix

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -65,11 +65,11 @@
         top: 0;
         right: 0;
         width: 200px;
-        min-height: 100%;
+        height: 100%;
+        overflow: auto;
         background-image: url("/img/menu-backdrop-mob-1x.jpg");
         position: absolute;
         margin: auto;
-       /* transform: translate(-50%, -50%) scale(1);*/
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         background-size: cover;
             background-position: center;
